--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<center>
 		<div class="estilo_caja">
-		<p class="estilo_titulo">INGRESA TUS DATOS</p>
+		<p class="estilo_titulo">Queremos Conocerte</p>
 		<form action="proces.php" method="post" name="form">
 			<table>
 				<tr>
